# DAE

./: .gitignore  .gitmodules  belangrijke_info_stage.docx
jaar1/: ToDo2D.txt
jaar1/C++/ClickPuzzle_Ramses/: ClickPuzzle.sln  ClickPuzzle.vcxproj  ClickPuzzle.vcxproj.filters  Game.cpp  Game.h  Tile.cpp  Tile.h  structs.h  utils.cpp  utils.h
jaar1/C++/Prog1DAE23WiemeJarneQExample/: Prog1DAE23WiemeJarneQExample.sln  Prog1DAE23WiemeJarneQExample.vcxproj
jaar1/C++/Prog1DAE23_Ex58_Wieme_Jarne/: Game.cpp  Game.h
jaar1/C++/Prog1DAE23_Q42_Wieme_Jarne/: Prog1DAE23_Q42_Wieme_Jarne.sln
jaar1/C++/Prog1DAEE23_Q42_Wieme_Jarne/: Prog1DAEE23_Q42_Wieme_Jarne.cpp  Prog1DAEE23_Q42_Wieme_Jarne.sln  Prog1DAEE23_Q42_Wieme_Jarne.vcxproj
jaar1/Prog1DAE23_Q42_Wieme_Jarne/: Game.h
jaar1/wiskunde/: AMP(1)-Lab03_TrigonometricFormulas21-22_v4.docx  AMP(1)-Lab05_Vectors21-22.docx  AMP(1)-Lab08_DotProduct21-22.docx  AMP(1)-Lab10_Matrices21-22.docx  AMP(1)-Lab11_TransformationAnalysis21-22.docx  AMP(1)-Lab12_SceneGraphs21-22.docx  AMP1-Lab04_Functions21-22_v4.docx  AMP1-Lab09_CrossProduct21-22.docx  Ass08_Cross_product.docx
jaar1/wiskunde/geogebra files/: geogebra-export.ggb  oef.3.2.2.ggb  wisk_lab12_3.1.1.ggb  (+1 more)
other/: equalizerApo_settings.txt
other/OpenGL/: OpenGL.sln  OpenGL.vcxproj  OpenGL.vcxproj.filters  Source.cpp  glad.c
sem_1/wiskunde/: AMP(1)-Lab02_TrigonometryFundamentals21-22_v3.docx  AMP(1)-Lab07_Kinematics_v2.docx  AMP(1)-Lab11_TransformationAnalysis21-22.docx  AMP1-Lab09_CrossProduct21-22.docx  ~$P(1)-Lab08_DotProduct21-22.docx
sem_2/amp_2/: AMP(2)-Lab01_System solving in GeoGebra-2022.docx  AMP(2)-Lab02_Parameters_2022.docx  AMP(2)-Lab03_Beziers-2022.docx  AMP(2)-Lab04_Dynamics_2022.docx  AMP(2)-Lab05_Central Collisions.docx  AMP(2)-Lab06_Oblique Collisions.docx  AMP(2)-Lab07_Complex arithmetics_2022.docx  AMP(2)-Lab08-Complex 2D Rotation_2022.docx  AMP(2)-Lab09_Quaternion arithmetic_2022.docx  AMP(2)-Lab10_Quaternion 3D Rotation.docx  AMP(2)-Lab11_Inverse Kinematics_2022.docx  TeKennenTheoryExam.docx  formules.docx  formules_dynamics.docx
sem_2/programming_2/: Wieme_Jarne_SuperStarWars.xlsx
sem_3/Environments/: Cable.fbx  CeilingCornerLeft.fbx  CeilingCornerRight.fbx  LOW.fbx  Lamp3.fbx  bump.fbx  ceiling.fbx  chambrant.fbx  corridorWatNietDoen.docx  dangerSymbol.fbx  door.fbx  door2.fbx  electricitySymbol.fbx  feedback.docx  floor1.fbx  floorCorner.fbx  floorCornerLeft.fbx  floorCornerRight.fbx  freightWagonElevator.fbx  gasSymbol.fbx  keypad.fbx  lamp1.fbx  lamp2.fbx  leftCorner1.fbx  leftCorner2.fbx  meshes.ma  monitor.fbx  monitor2.fbx  normalMap_LOW.fbx  pilar.fbx  railPiece.fbx  railTSplit.fbx  rightCorner1.fbx  rightcorner2.fbx  rim.fbx  smallBump.fbx  stairWithSupport.fbx  stairs.fbx  straight1.fbx  straight2.fbx  (+6 more)
sem_3/Game_Mechanics/: 2DAE15_Wieme_Jarne_Unity_Proposal.docx  2DAE15_Wieme_Jarne_Unreal_Proposal.docx  2DAExx_Wieme_Jarne_Unity_Proposal.docx  ~$AE15_Wieme_Jarne_Unreal_Proposal.docx
sem_3/Gameplay_Prog/: Rotate180ForZombieGame.ggb
sem_4/3DForGames/: Start_Week6.hipnc  exam.hipnc  exam_weapons.psd  week1.hipnc  week3.hipnc  week4.hipnc  week5.hipnc  week6.hipnc
sem_4/Graphics_Prog2/: 2DAE15_Wieme_Jarne_GP2-Proposal2023.docx
sem_4/ToolDevCpp/MinecraftToolCMakeProject/: CMakeLists.txt  License.txt
sem_4/ToolDevCpp/MinecraftToolCMakeProject - Copy/: CMakeLists.txt
sem_4/ToolDevCpp/MinecraftToolCMakeProject - Copy/JuceGUI/: MainComponent.h
sem_4/ToolDevCpp/MinecraftToolCMakeProject - Copy/MinecraftTool/: CMakeLists.txt
sem_4/ToolDevCpp/MinecraftToolCMakeProject - Copy/buil/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  MinecraftJson.sln  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
sem_4/ToolDevCpp/MinecraftToolCMakeProject - Copy/buil/commoncode/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake  commoncode.vcxproj  commoncode.vcxproj.filters
sem_4/ToolDevCpp/MinecraftToolCMakeProject - Copy/buil/minecraftjsonconsole/: INSTALL.vcxproj  INSTALL.vcxproj.filters  MinecraftJsonConsole.vcxproj  MinecraftJsonConsole.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake
sem_4/ToolDevCpp/MinecraftToolCMakeProject - Copy/buil/rapidjson/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake
sem_4/ToolDevCpp/MinecraftToolCMakeProject - Copy/commoncode/: CMakeLists.txt  JsonToObj.h
sem_4/ToolDevCpp/MinecraftToolCMakeProject - Copy/minecraftjsonconsole/: CMakeLists.txt  main.cpp
sem_4/ToolDevCpp/MinecraftToolCMakeProject - Copy/rapidjson/: CMakeLists.txt
sem_4/ToolDevCpp/MinecraftToolCMakeProject/CommonCode/: CMakeLists.txt  JsonToObj.h
sem_4/ToolDevCpp/MinecraftToolCMakeProject/JuceGUI/: CMakeLists.txt  Main.cpp  MainComponent.cpp  MainComponent.h  TableModel.cpp  TableModel.h
sem_4/ToolDevCpp/MinecraftToolCMakeProject/MinecraftTool/: MinecraftTool.cpp
sem_4/ToolDevCpp/Week2/Exercise2/: CMakeLists.txt
sem_4/ToolDevCpp/Week2/Exercise2/commoncode/: Path.h  Waypoint.h
sem_4/ToolDevCpp/Week2/Exercise2/tool/: CMakeLists.txt  Exercise2.cpp
sem_4/ToolDevCpp/Week2/Exercise3/: CMakeLists.txt
sem_4/ToolDevCpp/Week2/Exercise3/commoncode/: CMakeLists.txt  Path.h
sem_4/ToolDevCpp/Week2/Exercise3/staticlibexample/: CMakeLists.txt  FMatrix.cpp
sem_4/ToolDevCpp/Week2/Exercise3/tool/: CMakeLists.txt  Exercise3.cpp
(+3406 files in other folders)
